# rivian-python-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  python-publish.yaml  stale.yaml
src/rivian/: __init__.py  auth.py  ble.py  const.py  exceptions.py  rivian.py  rivian_ble.py  schema.graphql  utils.py  vehicleInfo.py  ws_monitor.py
src/rivian/schemas/: charging.graphql  gateway.graphql  orders.graphql
tests/: __init__.py  responses.py  rivian_test.py  test_version.py  utils_test.py
tests/fixtures/: drivers_and_keys_success.json
