[project]
name = "rivian-python-client"
description = "Rivian API Client (Unofficial)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Brian Retterer", email = "bretterer@gmail.com" },
    { name = "J.R. Gutierrez", email = "jrgutier@gmail.com" },
    { name = "Nathan Spencer", email = "natekspencer@gmail.com" },
    { name = "Trevor Mack", email = "drummer8001@gmail.com" },
]
dependencies = [
    "aiohttp (>=3.0.0)",
    "cryptography (>=41.0.1)",
    "backports-strenum (>=1.2.4) ; python_version < '3.11'",
]
dynamic = [ "version" ]

[project.optional-dependencies]
ble = [
    "bleak (>=0.21)",
    "dbus-fast (>=2.11.0) ; sys_platform == 'linux'",
]

[tool.poetry]
version = "0.0.0"
packages = [
    { include = "rivian", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<9.0.0"
pytest-asyncio = ">=0.18.3,<1.3.0"
python-dotenv = ">=0.20,<1.3"
aresponses = ">=2.1.5,<4.0.0"
mypy = ">=1.7.0,<2.0.0"
ruff = ">=0.4,<0.15"
pre-commit = "^4.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
