[project]
name = "rivian-python-client"
description = "Rivian API Client (Unofficial)"
authors = [
    { name = "Brian Retterer", email = "bretterer@gmail.com" },
    { name = "J.R. Gutierrez", email = "jrgutier@gmail.com" },
    { name = "Nathan Spencer", email = "natekspencer@gmail.com" },
    { name = "Trevor Mack", email = "drummer8001@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiohttp (>=3.0.0)",
    "cryptography (>=41.0.1)",
    "backports-strenum (>=1.2.4) ; python_version < '3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
ble = [
    "bleak (>=0.21)",
    "dbus-fast (>=2.11.0) ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.0,<1.4",
    "python-dotenv>=1.0,<1.3",
    "aresponses>=3.0,<4.0",
    "mypy>=1.7,<2.0",
    "ruff>=0.15,<0.16",
    "pre-commit>=4.5.0,<5",
]

[tool.hatch.build.hooks.version]
path = "src/rivian/__version__.py"

[tool.hatch.build.targets.sdist]
include = ["src/rivian"]

[tool.hatch.build.targets.wheel]
include = ["src/rivian"]

[tool.hatch.build.targets.wheel.sources]
"src/rivian" = "rivian"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"